--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -108,7 +108,7 @@
                             {{ include('/components/_index_submission.twig') }}
                         {% endfor %}
                         <div class="content-entry">
-                            <a href="/browse?user={{ data.username }}">Browse more</a>
+                            <a href="/browse?user={{ data.username }}">{{ localize('browse_more') }}</a>
                         </div>
                     </div>
                 </div>
