--- a/private/skins/bootstrap/templates/users.twig
+++ b/private/skins/bootstrap/templates/users.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Browse{% endblock %}
+{% block title %}{{ localize('browse') }}{% endblock %}
 
 	{% block content %}
         <div class="alert alert-primary">TODO: Redesign this so that it doesn't look like utter garbage.</div>
