--- a/private/skins/finalium/templates/components/beta/_header.twig
+++ b/private/skins/finalium/templates/components/beta/_header.twig
@@ -25,7 +25,7 @@
         </div>
         <div id="masthead-content">
             <div id="masthead-upload-button-group" style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 5px;">
-                <a href="/browse">Browse</a>
+                <a href="/browse">{{ localize('browse') }}</a>
                 <a href="/upload">Upload</a>
             </div>
             <form id="masthead-search" action="/results">
