--- a/private/skins/finalium/templates/components/nostalgia/_header.twig
+++ b/private/skins/finalium/templates/components/nostalgia/_header.twig
@@ -10,7 +10,7 @@
 			</form>
 		</div>
 		<div class="masthead-nav">
-			<a href="/browse">Browse</a><a href="/upload">Upload</a>
+			<a href="/browse">{{ localize('browse') }}</a><a href="/upload">Upload</a>
 		</div>
 		<div class="masthead-utility">
 			{% if is_user_logged_in %}
