--- a/private/skins/finalium/templates/components/videolist.twig
+++ b/private/skins/finalium/templates/components/videolist.twig
@@ -3,6 +3,6 @@
 {% endfor %}
 <div class="center">
     <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
-        More
+        {{ localize('more') }}
     </div>
 </div>
