--- a/private/skins/finalium/templates/watch.twig
+++ b/private/skins/finalium/templates/watch.twig
@@ -137,7 +137,7 @@
                   {% endfor %}
                   <div class="center">
                      <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
-                        More
+                        {{ localize('more') }}
                      </div>
                   </div>
                   <div class="collapsed" id="fromUserVideoList">
