--- a/private/skins/biscuit/templates/components/_comment.twig
+++ b/private/skins/biscuit/templates/components/_comment.twig
@@ -12,10 +12,10 @@
             {% endif %}
 
             {% if comment.id and is_user_logged_in %}
-            <a class="reply-button" data-comment-id="{{ comment.id }}">Reply</a>
+            <a class="reply-button" data-comment-id="{{ comment.id }}">{{ localize('reply') }}</a>
             <div class="reply-form" id="reply-form-{{ comment.id }}" style="display: none;">
                 <textarea class="form-submit-wide" id="reply_contents_{{ comment.id }}" maxlength="1000" placeholder="Write your reply" rows="4"></textarea>
-                <button class="button button-secondary submit-reply-button" data-comment-id="{{ comment.id }}">Reply</button>
+                <button class="button button-secondary submit-reply-button" data-comment-id="{{ comment.id }}">{{ localize('reply') }}</button>
             </div>
             {% endif %}
 
