--- a/private/skins/bootstrap/templates/components/_header_default.twig
+++ b/private/skins/bootstrap/templates/components/_header_default.twig
@@ -73,7 +73,7 @@
                 <li class="nav-item"><a href="/" class="nav-link link-light px-2">{{ icon('house-door', 16) }} Home</a>
                 </li>
                 <li class="nav-item"><a href="/browse" class="nav-link link-light px-2">{{ icon('play-btn', 16) }}
-                        Browse</a></li>
+                        {{ localize('browse') }}</a></li>
                 <li class="nav-item"><a href="/users" class="nav-link link-light px-2">{{ icon('people', 16) }}
                         Members</a></li>
             </ul>
