--- a/private/skins/finalium/templates/browse.twig
+++ b/private/skins/finalium/templates/browse.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% block title %}Browse {% if page != 1 %}(Page {{ page }}){% endif %}{% endblock %}
+{% block title %}{{ localize('browse') }} {% if page != 1 %}(Page {{ page }}){% endif %}{% endblock %}
 
 	{% block content %}
         <div class="grid">
