--- a/scss/finalium/_grid-breakpoints.scss
+++ b/scss/finalium/_grid-breakpoints.scss
@@ -1,14 +1,3 @@
-@use 'sass:math';
-@use 'sass:meta';
-
-.screwPaddingRight {
-  padding-right: 0px !important;
-}
-
-.screwPaddingLeft {
-  padding-left: 0px !important;
-}
-
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
@@ -20,15 +9,6 @@ $screen-lg-min: 992px;
 
 // Large tablets and desktops
 $screen-xl-min: 1200px;
-
-//ugly polyfill to make sure stuff doesn't break on libsass
-@function private-div($a, $b) {
-  @if (meta.function-exists('div', 'math')) {
-    @return math.div($a, $b);
-  } @else {
-    @return $a / $b;
-  }
-}
 
 // Small devices
 @mixin sm {
@@ -59,7 +39,6 @@ $screen-xl-min: 1200px;
 }
 
 $columns: 16;
-$grid-columns: 16;
 $gap: 10px;
 $breakpoints: (
         sm: 500px,
@@ -68,85 +47,36 @@ $breakpoints: (
         xl: 1000px
 );
 
-@mixin make-grid-columns($i: 1, $list: ".col-md-#{$i}") {
-  @for $i from (1 + 1) through $columns {
-    $list: "#{$list}, .col-md-#{$i}";
-  }
-  #{$list} {
-    position: relative;
-    // Prevent columns from collapsing when empty
-    min-height: 1px;
-    // Inner gutter via padding
-    padding-right: floor(private-div($gap, 2));
-    padding-left: ceil(private-div($gap, 2));
-  }
-}
+@mixin create-selectors($breakpoint: null) {
+  $infix: if($breakpoint == null, '', '-#{$breakpoint}');
 
-@include make-grid-columns;
-
-// Creates a wrapper for a series of columns
-@mixin make-row($gutter: $gap) {
-  @include clearfix;
+  @for $i from 1 through $columns {
+    .col#{$infix}-#{$i} {
+      grid-column-end: span $i;
+    }
+    .col-offset#{$infix}-#{$i} {
+      grid-column-start: $i + 1;
+    }
+    .row#{$infix}-#{$i} {
+      grid-row-end: span $i;
+    }
+    .row-offset#{$infix}-#{$i} {
+      grid-row-start: $i + 1;
+    }
+  }
 }
 
 .grid {
-  @include make-row;
+  display: grid;
+  grid-template-columns: repeat($columns, 1fr);
+  grid-gap: $gap;
+  gap: $gap;
 }
 
-@mixin calc-grid-column($index, $class, $type) {
-  @if ($type == width) and ($index > 0) {
-    .col-#{$class}-#{$index} {
-      width: percentage(private-div($index, $grid-columns));
-    }
-  }
-  @if ($type == push) and ($index > 0) {
-    .col-#{$class}-push-#{$index} {
-      left: percentage(private-div($index, $grid-columns));
-    }
-  }
-  @if ($type == push) and ($index == 0) {
-    .col-#{$class}-push-0 {
-      left: auto;
-    }
-  }
-  @if ($type == pull) and ($index > 0) {
-    .col-#{$class}-pull-#{$index} {
-      right: percentage(private-div($index, $grid-columns));
-    }
-  }
-  @if ($type == pull) and ($index == 0) {
-    .col-#{$class}-pull-0 {
-      right: auto;
-    }
-  }
-  @if ($type == offset) {
-    .col-#{$class}-offset-#{$index} {
-      margin-left: percentage(private-div($index, $grid-columns));
-    }
+@include create-selectors;
+
+@each $breakpoint, $width in $breakpoints {
+  @media (min-width: $width) {
+    @include create-selectors($breakpoint);
   }
 }
-
-@mixin float-grid-columns($class, $i: 1, $list: ".col-#{$class}-#{$i}") {
-  @for $i from (1 + 1) through $grid-columns {
-    $list: "#{$list}, .col-#{$class}-#{$i}";
-  }
-  #{$list} {
-    float: left;
-  }
-}
-
-@mixin loop-grid-columns($columns, $class, $type) {
-  @for $i from 0 through $columns {
-    @include calc-grid-column($i, $class, $type);
-  }
-}
-
-@mixin make-grid($class) {
-  @include float-grid-columns($class);
-  @include loop-grid-columns($grid-columns, $class, width);
-  @include loop-grid-columns($grid-columns, $class, pull);
-  @include loop-grid-columns($grid-columns, $class, push);
-  @include loop-grid-columns($grid-columns, $class, offset);
-}
-
-@include make-grid(md);
