--- a/private/skins/finalium/templates/index.twig
+++ b/private/skins/finalium/templates/index.twig
@@ -27,7 +27,7 @@
                 {% endif %}
             </div>
         {% elseif current_theme == 'beta' %}
-            <div class="container sb-welcome grid">
+            <div class="container sb-welcome">
                 <div class="grid">
                 {% if is_user_logged_in %}
                     <!-- hardcoded widths, whoops! -chaziz 6/12/2024 -->
