--- a/private/skins/biscuit/templates/browse.twig
+++ b/private/skins/biscuit/templates/browse.twig
@@ -1,6 +1,6 @@
 {% extends "_layout.twig" %}
 
-{% set title = "{{ localize('browse') }}" %}
+{% set title = localize('browse') %}
 
 {% block content %}
     {% set total_pages = (data.count / items_per_page) | round(0, 'ceil') %}
