--- a/scss/finalium/finalium_beta.scss
+++ b/scss/finalium/finalium_beta.scss
@@ -101,6 +101,10 @@ $theme-colors: (
 
 // insert shit here afterwards
 
+p {
+  line-height: 1.25em;
+}
+
 // headers were all bold
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
