--- a/scss/finalium/_style_forums.scss
+++ b/scss/finalium/_style_forums.scss
@@ -1,27 +1,37 @@
-/// forum specific styling uwu -rollerguy 2021 \\\
+/// forum specific styling uwu \\\
 
 table.c1 {
-  border: #000000 1px solid;
+  //border: $grid 1px solid;
+  border: $gray-500 1px solid;
   border-spacing: 0px;
   border-collapse: collapse;
   width: 100%;
 
-  tr.c {
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+  tr.h, tr.c {
     text-align: center;
-  }
-
-  tr.h {
-    background: lighten($primary, 1.5%);
     color: #ffffff;
-    font-weight: bold;
   }
 
-  tr.c {
-    background: #ccc;
+  /*
+  tr.h { background: #235aa3; }
+
+  tr.c { background: #208aa5; }
+
+   */
+
+  tr.h { background: $primary; }
+
+  tr.h td, tr.c td {
+    border-left: 0;
+    border-right: 0;
   }
 
-  td.b {
-    border: #000000 1px solid;
+  td {
+    //border: $grid 1px solid;
+    border: $gray-500 1px solid;
     padding: 5px;
   }
 
@@ -30,20 +40,12 @@ table.c1 {
     border: 0px none;
   }
 
-  tr.n1, td.n1 {
-    background: #afc6db;
-  }
-
-  tr.n2, td.n2 {
-    background: #ffffff;
-  }
-
-  tr.n3, td.n3 {
-    background: #d4d4d4;
-  }
+  tr.n1, td.n1 { background: #f5f5f5; }
+  tr.n2, td.n2 { background: #ebebeb; }
+  tr.n3, td.n3 { background: #d4d4d4; }
 
   .delete {
-    font-weight: 900;
+    font-weight: bold;
     display: inline-block;
     margin-left: 6px;
     margin-right: 6px;
@@ -52,10 +54,36 @@ table.c1 {
   }
 }
 
+/* Mobile hacks haha :^) */
+@media (min-width: 640px) {
+  .nod { display: none; }
+}
+
+@media only screen and (max-width: 640px) {
+  /* 'no mobile' */
+  .nom { display: none; }
+
+  /* 'no desktop' */
+  .nod { display: unset; }
+
+  .nod img { max-height: 64px; }
+
+  /* display block on mobile */
+  .blkm { display: block; }
+}
+
 .pagelist {
   margin-left: 4px;
   margin-top: 4px;
   margin-bottom: 4px;
+}
+
+.breadcrumb {
+  margin: 20px 15px;
+
+  .actions {
+    float: right;
+  }
 }
 
 .posttoolbar button {
@@ -65,66 +93,64 @@ table.c1 {
 }
 
 .threadpost {
-  .topbar_1 {
-    border-bottom: 0 !important;
-    min-width: 180px;
-    text-align: center;
-    height: 24px;
+  .sidebar, .mainbar, .topbar_mobile {
+    border: 0;
   }
 
   .sidebar {
-    border-top: 0 !important;
-    text-align: center;
+    padding: 10px 0 10px 10px;
+    width: 180px;
+  }
+  .topbar {
+    border: 0;
+    height: 32px;
+  }
 
-    .avatar {
-      max-width: 120px;
-      max-height: 120px;
-      border-radius: 5px;
-    }
+  .sidebar, .mainbar {
+    vertical-align: top;
+  }
+
+  .topbar {
+    font-size: 0.96em;
   }
 
   .mainbar {
     p {
       margin-top: 0;
     }
-
     table {
       border: #000000 1px solid;
       border-spacing: 0px;
       border-collapse: collapse;
     }
-
     th {
-      background: #777;
+      background: #3367aa;
       font-size: 1em;
       color: #ffffff;
     }
-
     td, th {
       border: #000000 1px solid;
       padding: 5px;
     }
-
     .siggy {
       border-top: 1px solid black;
       font-size: 10pt;
       margin-top: 3em;
     }
-
     img {
       max-width: 100%;
     }
   }
 }
 
-.autowidth {
-  width: auto !important;
+/*
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
+*/
 
-.wbreak {
-  word-break: break-word;
-}
-
-.fullwidth {
-  width: 100% !important;
-}
+.autowidth { width: auto !important; }
+.wbreak { word-break: break-word; }
+.fullwidth { width: 100% !important; }
