bring back likes/dislikes on bootstrap frontend + fix pagination on browse?

--- a/private/skins/bootstrap/templates/_layout.twig
+++ b/private/skins/bootstrap/templates/_layout.twig
@@ -25,8 +25,8 @@
             crossorigin="anonymous"></script>
     <script src="/assets/common_bootstrap.js?r={{ get_css_file_date() }}"></script>
     <script>
-        subscribe_string = 'Subscribe';
-        unsubscribe_string = 'Unsubscribe';
+        subscribe_string = 'Follow';
+        unsubscribe_string = 'Unfollow';
     </script>
     <meta name="theme-color" content="#0065d8">
     <title>{% block title %}{% endblock %} - {{ website_branding.name }}</title>
