--- a/private/skins/bootstrap/templates/browse.twig
+++ b/private/skins/bootstrap/templates/browse.twig
@@ -3,11 +3,22 @@
 {% block title %}{{ localize('browse') }}{% endblock %}
 
 	{% block content %}
+        {% set total_pages = (data.count / items_per_page) | round(0, 'ceil') %}
+        {% set current_page = page %}
+
+        {% if user %}
+            {% set le_url = 'browse?user=' ~ user ~ '&page=%s' %}
+        {% elseif type == 'recent' %}
+            {% set le_url = 'browse?page=%s' %}
+        {% else %}
+            {% set le_url = 'browse?type=' ~ type ~ '&page=%s' %}
+        {% endif %}
+
         <div class="row">
             <div class="col">
                 <h3>{{ localize('browse') }} uploads</h3>
                 <div class="card-body">
-                    {% for video in data.uploads|batch(4) %}
+                    {% for video in data.submissions|batch(4) %}
                         <div class="row">
                             {% for submission in video %}
                                 <div class="col-3">
@@ -18,7 +29,7 @@
                     {% else %}
                         <p>No uploads.</p>
                     {% endfor %}
-                    {{ pagination(pageCount, 20, currentPage, url) }}
+                    {{ pagination(data.count, items_per_page, le_url, current_page) }}
                 </div>
             </div>
         </div>
