--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -2,14 +2,6 @@
 
 {% set title = data.username %}
 
-{% if data.is_fedi %}
-    {% set profile_picture = data.fedi_pfp %}
-    {% set banner_picture = data.fedi_banner %}
-{% else %}
-    {% set profile_picture = profile_picture(data.username) %}
-    {% set banner_picture = profile_banner(data.username) %}
-{% endif %}
-
 {% set opengraph_type = "profile" %}
 {% set opengraph_username = data.username %}
 {% if data.about | trim is not empty %}
@@ -17,7 +9,7 @@
 {% else %}
     {% set opengraph_description = "No description." %}
 {% endif %}
-{% set opengraph_image = profile_picture %}
+{% set opengraph_image = profile_picture(data.username) %}
 
 {% block scripts %}
     <script>
@@ -31,16 +23,13 @@
     <div class="content-box">
         <div class="profile-box">
             <div class="profile-box-pfp">
-                <img src="{{ profile_picture }}" class="pfp" alt="{{ data.username }}">
+                <img src="{{ profile_picture(data.username) }}" class="pfp" alt="{{ data.username }}">
             </div>
             <div class="profile-box-info">
                 <div class="profile-box-username">
                     <span style="color:{{ data.color }}">{{ data.displayname }}</span>
                     {% if data.is_staff %}
                         <div class="profile-box-icon biscuit-icon staff"></div>
-                    {% endif %}
-                    {% if data.is_fedi %}
-                        <img class="profile-box-icon" src="https://{{ data.instance }}/favicon.png">
                     {% endif %}
                 </div>
                 <div class="profile-box-handle">
@@ -51,10 +40,8 @@
                         {{ data.about | markdown_user_written }}
                     {% endif %}
                     {#
-                    {% if not data.is_fedi %}
-                        | Joined {{ data.joined | relative_time }} |
-                        <span id="follower_count">{{ data.followers }}</span> followers
-                    {% endif %}
+                    | Joined {{ data.joined | relative_time }} |
+                    <span id="follower_count">{{ data.followers }}</span> followers
                     {% if data.old_usernames %}
                         <br>Old usernames:
                         {% for old_username in data.old_usernames %}
@@ -64,23 +51,21 @@
                     #}
                 </div>
             </div>
-            {% if not data.is_fedi %}
-                <div class="profile-box-follow">
-                    {% if not data.is_current %}
-                        <button class="button button-secondary" id="follow-user">
-                            {% if data.following %}
-                                Unfollow
-                            {% else %}
-                                Follow
-                            {% endif %}
-                        </button>
-                    {% else %}
-                        <a class="button button-primary" href="/settings">
-                            Edit
-                        </a>
-                    {% endif %}
-                </div>
-            {% endif %}
+            <div class="profile-box-follow">
+                {% if not data.is_current %}
+                    <button class="button button-secondary" id="follow-user">
+                        {% if data.following %}
+                            Unfollow
+                        {% else %}
+                            Follow
+                        {% endif %}
+                    </button>
+                {% else %}
+                    <a class="button button-primary" href="/settings">
+                        Edit
+                    </a>
+                {% endif %}
+            </div>
         </div>
     </div>
     <div class="content-box no-border-top">
