add "no reuploads" in the upload page

--- a/private/skins/bootstrap/templates/upload.twig
+++ b/private/skins/bootstrap/templates/upload.twig
@@ -7,7 +7,7 @@
             <h3>Upload</h3>
             <p>
                 Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
-                with the guidelines will result in your upload being taken down.
+                with the guidelines will result in your upload being taken down. (No reuploads!)
             </p>
             <form name="uploadForm" id="uploadForm" method="post" action="upload"
                   enctype="multipart/form-data">
