--- a/private/skins/finalium/templates/upload.twig
+++ b/private/skins/finalium/templates/upload.twig
@@ -9,7 +9,7 @@
                     <h2 style="margin-bottom: 0.5em;">Upload</h2>
                     <p>
                         Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
-                        with the guidelines will result in your upload being taken down.
+                        with the guidelines will result in your upload being taken down. (No reuploads!)
                     </p>
                     <h4 style="margin-bottom: 0.5em;">Title</h4>
                     <input type="text" class="form-control form-long uploader-form" id="title" name="title" required>
