--- a/private/skins/biscuit/templates/upload.twig
+++ b/private/skins/biscuit/templates/upload.twig
@@ -9,7 +9,7 @@
             </div>
             <p style="font-weight: bold;">
                 Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
-                with the guidelines will result in your upload being taken down.
+                with the guidelines will result in your upload being taken down. (No reuploads!)
             </p>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
